// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Participant should fail if cannot find the address remotely 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 dgWSWs"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1 z-20"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/></svg>"
                    title="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
                  />
                </div>
              </div>
            </div>
            <div
              class="relative w-full"
            >
              <input
                aria-invalid="true"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
                data-testid="select-list__input"
                name="address"
                readonly=""
                value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
              />
              <div
                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
              >
                <span
                  data-errortext="The address could not be found"
                  data-testid="Input-error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="downshift-67-menu"
                  role="combobox"
                >
                  <label
                    for="downshift-66-input"
                    id="downshift-67-label"
                  />
                  <div
                    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                    data-testid="SelectDropdownInput"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-67-menu"
                      aria-invalid="true"
                      aria-labelledby="downshift-67-label"
                      autocomplete="off"
                      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default  pr-16 pl-16 pr-18"
                      data-testid="SelectDropdownInput__input"
                      id="downshift-66-input"
                      name="address"
                      placeholder="Select option"
                      value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
                    />
                    <div
                      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4 mr-12"
                    >
                      <span
                        data-errortext="The address could not be found"
                        data-testid="Input-error"
                      >
                        <div
                          class="sc-bdfBwQ iyevwF text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            alert-warning.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="downshift-67-label"
                    class="styles__SelectOptionsList-b2falt-1 cGgIup"
                    id="downshift-67-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV my-4 w-full"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 hrpPWq"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="py-1"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            trash.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should fail to find 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 dgWSWs"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1 z-20"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyiba"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"100\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyiba"
                  />
                </div>
              </div>
            </div>
            <div
              class="relative w-full"
            >
              <input
                aria-invalid="true"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
                data-testid="select-list__input"
                name="address"
                readonly=""
                value="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyiba"
              />
              <div
                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
              >
                <span
                  data-errortext="The address could not be found"
                  data-testid="Input-error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="downshift-1-menu"
                  role="combobox"
                >
                  <label
                    for="downshift-0-input"
                    id="downshift-1-label"
                  />
                  <div
                    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                    data-testid="SelectDropdownInput"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-1-menu"
                      aria-invalid="true"
                      aria-labelledby="downshift-1-label"
                      autocomplete="off"
                      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default  pr-16 pl-16 pr-18"
                      data-testid="SelectDropdownInput__input"
                      id="downshift-0-input"
                      name="address"
                      placeholder="Select option"
                      value="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyiba"
                    />
                    <div
                      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4 mr-12"
                    >
                      <span
                        data-errortext="The address could not be found"
                        data-testid="Input-error"
                      >
                        <div
                          class="sc-bdfBwQ iyevwF text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            alert-warning.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="downshift-1-label"
                    class="styles__SelectOptionsList-b2falt-1 cGgIup"
                    id="downshift-1-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV my-4 w-full"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 hrpPWq"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="py-1"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            trash.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should fail with cold wallet 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 dgWSWs"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1 z-20"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/></svg>"
                    title="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                  />
                </div>
              </div>
            </div>
            <div
              class="relative w-full"
            >
              <input
                aria-invalid="true"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
                data-testid="select-list__input"
                name="address"
                readonly=""
                value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
              />
              <div
                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
              >
                <span
                  data-errortext="The public key could not be found"
                  data-testid="Input-error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="downshift-27-menu"
                  role="combobox"
                >
                  <label
                    for="downshift-26-input"
                    id="downshift-27-label"
                  />
                  <div
                    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                    data-testid="SelectDropdownInput"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-27-menu"
                      aria-invalid="true"
                      aria-labelledby="downshift-27-label"
                      autocomplete="off"
                      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default  pr-16 pl-16 pr-18"
                      data-testid="SelectDropdownInput__input"
                      id="downshift-26-input"
                      name="address"
                      placeholder="Select option"
                      value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                    />
                    <div
                      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4 mr-12"
                    >
                      <span
                        data-errortext="The public key could not be found"
                        data-testid="Input-error"
                      >
                        <div
                          class="sc-bdfBwQ iyevwF text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            alert-warning.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="downshift-27-label"
                    class="styles__SelectOptionsList-b2falt-1 cGgIup"
                    id="downshift-27-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV my-4 w-full"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 hrpPWq"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="py-1"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            trash.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should render custom participants 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 dgWSWs"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1 z-20"
            >
              <div
                class="Circle-uw7h4j-0 blBpcG mx-3 bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
              />
            </div>
            <div
              class="relative w-full"
            >
              <input
                aria-invalid="false"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
                data-testid="select-list__input"
                name="address"
                readonly=""
                value=""
              />
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="downshift-177-menu"
                  role="combobox"
                >
                  <label
                    for="downshift-176-input"
                    id="downshift-177-label"
                  />
                  <div
                    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                    data-testid="SelectDropdownInput"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-177-menu"
                      aria-labelledby="downshift-177-label"
                      autocomplete="off"
                      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default false pl-16 pr-11"
                      data-testid="SelectDropdownInput__input"
                      id="downshift-176-input"
                      name="address"
                      placeholder="Select option"
                      value=""
                    />
                  </div>
                  <ul
                    aria-labelledby="downshift-177-label"
                    class="styles__SelectOptionsList-b2falt-1 cGgIup"
                    id="downshift-177-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="Button__StyledButton-mdtvtf-0 kwcZQn my-4 w-full"
        disabled=""
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                        title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 hrpPWq"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="py-1"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            trash.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should work with a remote wallet 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 dgWSWs"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1 z-20"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                    title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  />
                </div>
              </div>
            </div>
            <div
              class="relative w-full"
            >
              <input
                aria-invalid="false"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
                data-testid="select-list__input"
                name="address"
                readonly=""
                value="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
              />
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="downshift-135-menu"
                  role="combobox"
                >
                  <label
                    for="downshift-134-input"
                    id="downshift-135-label"
                  />
                  <div
                    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                    data-testid="SelectDropdownInput"
                  >
                    <span
                      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 epSJiV py-3 pl-4 font-normal border border-transparent opacity-50 pointer-events-none cursor-default false pl-16 pr-11"
                      data-testid="SelectDropdownInput__typeahead"
                    >
                      D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                    </span>
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-135-menu"
                      aria-labelledby="downshift-135-label"
                      autocomplete="off"
                      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default false pl-16 pr-11"
                      data-testid="SelectDropdownInput__input"
                      id="downshift-134-input"
                      name="address"
                      placeholder="Select option"
                      value="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                    />
                  </div>
                  <ul
                    aria-labelledby="downshift-135-label"
                    class="styles__SelectOptionsList-b2falt-1 cGgIup is-open"
                    id="downshift-135-menu"
                    role="listbox"
                  >
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-0"
                      id="downshift-135-item-0"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-1"
                      id="downshift-135-item-1"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default is-highlighted"
                      data-testid="select-list__toggle-option-2"
                      id="downshift-135-item-2"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-3"
                      id="downshift-135-item-3"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-4"
                      id="downshift-135-item-4"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        D9YiyRYMBS2ofzqkufjrkB9nHofWgJLM7f
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-5"
                      id="downshift-135-item-5"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV my-4 w-full"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 hrpPWq"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="py-1"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            trash.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500"
                  >
                    <span>
                      Participant #2
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 hrpPWq"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="py-1"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            trash.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should work with an imported wallet 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 dgWSWs"
    >
      <fieldset
        class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
      >
        <label
          class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
          <div
            class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
            data-testid="FormLabel__required"
          />
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="absolute left-1 z-20"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs mx-3"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  />
                </div>
              </div>
            </div>
            <div
              class="relative w-full"
            >
              <input
                aria-invalid="false"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures sr-only"
                data-testid="select-list__input"
                name="address"
                readonly=""
                value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
              />
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="downshift-93-menu"
                  role="combobox"
                >
                  <label
                    for="downshift-92-input"
                    id="downshift-93-label"
                  />
                  <div
                    class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                    data-testid="SelectDropdownInput"
                  >
                    <span
                      class="InputGroup__InputAddonStyle-sc-1obbdqe-0 epSJiV py-3 pl-4 font-normal border border-transparent opacity-50 pointer-events-none cursor-default false pl-16 pr-11"
                      data-testid="SelectDropdownInput__typeahead"
                    >
                      D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                    </span>
                    <input
                      aria-autocomplete="list"
                      aria-controls="downshift-93-menu"
                      aria-labelledby="downshift-93-label"
                      autocomplete="off"
                      class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures cursor-default false pl-16 pr-11"
                      data-testid="SelectDropdownInput__input"
                      id="downshift-92-input"
                      name="address"
                      placeholder="Select option"
                      value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    />
                  </div>
                  <ul
                    aria-labelledby="downshift-93-label"
                    class="styles__SelectOptionsList-b2falt-1 cGgIup is-open"
                    id="downshift-93-menu"
                    role="listbox"
                  >
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-0"
                      id="downshift-93-item-0"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default is-highlighted"
                      data-testid="select-list__toggle-option-1"
                      id="downshift-93-item-1"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-2"
                      id="downshift-93-item-2"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-3"
                      id="downshift-93-item-3"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        DFJ5Z51F1euNNdRUQJKQVdG4h495LZkc6T
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-4"
                      id="downshift-93-item-4"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        D9YiyRYMBS2ofzqkufjrkB9nHofWgJLM7f
                      </div>
                    </li>
                    <li
                      aria-selected="false"
                      class="select-list-option cursor-default "
                      data-testid="select-list__toggle-option-5"
                      id="downshift-93-item-5"
                      role="option"
                    >
                      <div
                        class="select-list-option__label"
                      >
                        DKrACQw7ytoU2gjppy3qKeE2dQhZjfXYqu
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 z-20"
              data-testid="SelectRecipient__select-recipient"
            >
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  user.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV my-4 w-full"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-1fe0e3s-0 iBAzTp"
      >
        <div
          class="Table__TableWrapper-sc-84pst5-0 ccYCKK -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 hrpPWq"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="py-1"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            trash.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
              <tr
                class="border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="py-6 w-14"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                        title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="py-6"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500"
                  >
                    <span>
                      Participant #2
                    </span>
                  </div>
                  <div
                    class="max-w-sm"
                  >
                    <div
                      class="inline-flex items-center no-ligatures"
                    >
                      <span
                        class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                        data-testid="address__wallet-address"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="py-6 w-20 text-right"
                >
                  <button
                    class="Button__StyledButton-mdtvtf-0 hrpPWq"
                    data-testid="recipient-list__remove-recipient"
                    type="button"
                  >
                    <div
                      class="flex relative items-center space-x-2"
                    >
                      <div
                        class="py-1"
                      >
                        <div
                          class="sc-bdfBwQ fPrsah"
                          height="1em"
                          width="1em"
                        >
                          <svg>
                            trash.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
